--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -6,6 +6,7 @@ body {
     margin: 0;
     font-size: 14px;
     font-family: sans-serif;
+    min-width: 23rem;
 }
 
 :root {
@@ -25,11 +26,58 @@ body {
 }
 
 .card {
-    height: 10rem;
-    width: 10rem;
+    height: auto;
+    width: auto;
     background: var(--Dark-Grey);
-    border-radius: 8px;
+    border-radius: 10px;
+    padding: 1.2rem 2.5rem;
     display: grid;
+    justify-content: center;
 }
 
+.pImage {
+    height: 5rem;
+    width: 5rem;
+    background: url(../images/avatar-jessica.jpeg);
+    background-size: cover;
+    border-radius: 50%;
+    margin: 0 auto;
+}
 
+.info {
+    color: var(--White);
+    text-align: center;
+}
+
+.info-name {
+    font-size: 1.6rem;
+    margin: 1.2rem 0 .5rem 0;
+}
+
+.info-location {
+    font-size: 1rem;
+    margin: 0 0 2rem 0;
+    color: var(--Green);
+}
+
+.bio {
+    margin-bottom: 1rem;
+}
+
+.button {
+    width: 100%;
+    height: auto;
+    background: var(--Grey);
+    padding: .8rem 0;
+    margin: .7rem 0;
+    border-radius: 10px;
+    text-align: center;
+}
+
+.button > a{
+    color: var(--White);
+    text-decoration: none;
+    font-size: .9rem;
+    font-weight: bold;
+    letter-spacing: .03rem;
+}
